@@ -12,6 +12,7 @@ Version 1.5.13+svn:
  * Miscellaneous and bug fixes:
    * Fix another campaign replay bug (#13139)
    * Fix WML [advancefrom] bug (#13176)
+   * It is now possible to create units with random genders in debug mode
 
 Version 1.5.13:
  * Graphics:
